# News for Abuse 0.9a (2016)

- AntonioR's fork of the Xenoveritas version

ABUSE:
- enabled custom screen size and resolution
	- light enabled at high resolutions
- local config file
	- screen width, height and scale
	- editor mode
	- controller aiming, right stick sensitivity, dead zone and crosshair distance from the player
	- physics update time in ms
- unlocked framerate for rendering, physics locked at custom value
- re-enabled OpenGL rendering, enabled vsync
- fullscreen scaling and "fit screen" scaling using F11 and F12
- merged flags_struct and keys_struct into one settings class
- Xbox controller support:
	- fixed aiming using the right stick
	- fixed player movement using left stick and dpad
	- calculating and updating the crosshair position when aiming with a controller
	- rebindable controller buttons, saving and loading of button bindings via config file
	- navigating the main menu and save/load screens using dpad or left stick
- fixed level music not being played correctly when level was loaded
- quick load using F9, quick save using F5 on save consoles
- fixed gamma setting not being saved
- added cheats via chat console: bullettime, god, giveall, flypower, sneakypower, fastpower, healthpower
- enabled some high resolution images from the 1997 Mac OS release

ABUSE-TOOL:
- extracting PCX images in SPEC files to modern image formats using OpenCV
	- extracting as individual files
	- extracting as tilemaps
	- extracting animations as individual files
	- extracting as a texture atlas using texture packing algorithm
	- handling transparency in different types of images
	- padding between images
	- outline around groups in a texture atlas
	- external color palettes(tints)
	- tilemap palettes for tile positions
	- extraction settings and list of files via "../abuse-tool/extract.txt"
	- printing to console trough a log, log file saved at "../abuse-tool/log.txt"